tests/typecheck/fail/dict_new_ambiguous.tw
fn no_usage() {
  d := Dict.new()
}
